force-app/main/default/objects/copado__Pool_Connection__c/copado__Pool_Connection__c.object-meta.xml
<CustomObject>
    <label>Pool Connection</label>
    <nameField>
        <displayFormat>PCR-{000000}</displayFormat>
        <label>Pool Connection Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pool Connections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>