force-app/main/default/objects/copado__Pool_Connection__c/fields/copado__Maintenance_Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>copado__Maintenance_Schedule_Id__c</fullName>
    <description>Set by Copado when pool maintenance is saved. Do not edit manually unless directed by support.</description>
    <label>Maintenance Schedule Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>