force-app/main/default/objects/copado__Pool_Connection__c/fields/copado__Pool_Environment__c.field-meta.xml
<CustomField>
    <fullName>copado__Pool_Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pool Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>Pool Connections (Pool Environment)</relationshipLabel>
    <relationshipName>Pool_Environment_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>