force-app/main/default/objects/copado__Pool_Connection__c/fields/copado__Pool_Environment_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>copado__Pool_Environment_Branch_Name__c</fullName>
    <inlineHelpText>Git branch name for this environment pool, in the format pool/TargetEnvironmentName/PoolEnvironmentName. Example: pool/ScrumQA/QA1</inlineHelpText>
    <label>Pool Environment Branch Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>