force-app/main/default/objects/copado__Pool_Connection__c/fields/copado__Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Validating</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Updating</fullName>
            </value>
            <value>
                <fullName>Decommissioning</fullName>
            </value>
            <value>
                <fullName>Unauthorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>