force-app/main/default/objects/copado__Pool_Connection__c/fields/copado__Target_Environment__c.field-meta.xml
<CustomField>
    <fullName>copado__Target_Environment__c</fullName>
    <label>Target Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>Pool Connections</relationshipLabel>
    <relationshipName>Pool_Connections</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>